--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -107,6 +107,8 @@ select{
     background-color: #fff;
     position: fixed;
     top: 0px;
+    z-index: 10;
+    height: 110px;
     left: 0;
     width: 100%;
     &__inner {
